--- a/tileserver/package.json
+++ b/tileserver/package.json
@@ -2,17 +2,16 @@
   "name": "colouring-london-tileserver",
   "version": "1.0.0",
   "description": "Serve map tiles",
-  "main": "index.js",
+  "private": true,
   "dependencies": {
     "@mapbox/sphericalmercator": "^1.1.0",
     "express": "^4.16.3",
-    "mapnik": "^3.7.2",
-    "pg": "^7.4.3"
+    "mapnik": "^3.7.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tom Russell",
-  "license": "GPL"
+  "license": "GPL-3.0"
 }
