--- a/apiserver/package.json
+++ b/apiserver/package.json
@@ -4,12 +4,15 @@
   "description": "Serve API queries",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Tom Russell",
   "license": "GPL-3.0",
   "dependencies": {
     "express": "^4.16.3",
     "pg": "^7.4.3"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
