--- a/app/package.json
+++ b/app/package.json
@@ -11,16 +11,18 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
+    "@mapbox/sphericalmercator": "^1.1.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "connect-pg-simple": "^5.0.0",
     "express": "4.16.3",
     "express-session": "^1.15.6",
     "leaflet": "^1.3.4",
+    "mapnik": "^4.0.1",
     "razzle": "2.4.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
-    "react-leaflet": "^2.0.1",
+    "react-leaflet": "^1.0.1",
     "react-leaflet-universal": "^1.2.0",
     "react-router-dom": "4.3.1",
     "serialize-javascript": "^1.5.0"
