--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.6",
     "leaflet": "^1.3.4",
     "mapnik": "^4.0.1",
+    "path-to-regexp": "^2.4.0",
     "razzle": "2.4.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
