--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-leaflet": "^1.0.1",
     "react-leaflet-universal": "^1.2.0",
     "react-router-dom": "4.3.1",
+    "react-transition-group": "^2.4.0",
     "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
