--- a/app/package.json
+++ b/app/package.json
@@ -15,20 +15,22 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "connect-pg-simple": "^5.0.0",
-    "express": "4.16.3",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "fast-json-patch": "^2.0.7",
     "leaflet": "^1.3.4",
     "mapnik": "^4.0.1",
-    "razzle": "2.4.0",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "pg-promise": "^8.4.6",
+    "razzle": "^2.4.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-leaflet": "^1.0.1",
     "react-leaflet-universal": "^1.2.0",
-    "react-router-dom": "4.3.1",
-    "react-transition-group": "^2.4.0",
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.0",
     "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3"
+    "babel-eslint": "^10.0.1"
   }
 }
