--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,9 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@mapbox/sphericalmercator": "^1.1.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
