--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.3.4",
     "mapnik": "^4.0.1",
     "pg-promise": "^8.4.6",
+    "query-string": "^6.2.0",
     "razzle": "^2.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
