Add "click map" hint; tweak labels

--- a/app/src/frontend/fields-config.json
+++ b/app/src/frontend/fields-config.json
@@ -2,6 +2,7 @@
     {
         "title": "Location", "slug": "location",
         "help": "https://pages.colouring.london/location",
+        "intro": "Where is it?",
         "fields": [
             {
                 "title": "Building Name", "slug": "location_name", "type": "text",
@@ -72,9 +73,9 @@
         ]
     },
     {
-        "inactive": true,
-        "title": "Size & Shape", "slug": "form",
-        "help": "https://pages.colouring.london/form",
+        "title": "Size & Shape", "slug": "size",
+        "intro": "How big is it?",
+        "help": "https://pages.colouring.london/shape",
         "fields": [
             {
                 "title": "Core storeys", "slug": "size_storeys_core", "type": "number", "step": 1,
