--- a/app/src/frontend/fields-config.json
+++ b/app/src/frontend/fields-config.json
@@ -23,6 +23,18 @@
                 "title": "UPRNs", "slug": "ref_uprn", "type": "list",
                 "tooltip": "Unique Property Reference Numbers (to be filled automatically)",
                 "disabled": true
+            },
+            {
+                "title": "OSM ID", "slug": "ref_osm_id", "type": "text",
+                "tooltip": "OpenStreetMap feature ID"
+            },
+            {
+                "title": "Latitude", "slug": "location_latitude", "type": "number",
+                "step": 0.0001, "placeholder": 51
+            },
+            {
+                "title": "Longitude", "slug": "location_longitude", "type": "number",
+                "step": 0.0001, "placeholder": 0
             }
         ]
     },
