--- a/app/src/frontend/fields-config.json
+++ b/app/src/frontend/fields-config.json
@@ -155,7 +155,7 @@
         "title": "Like Me!", "slug": "like",
         "help": "https://pages.colouring.london/likeme",
         "fields": [
-            { "title": "Like", "slug": "likes_total", "type": "like", "tooltip": "Do you like the building?"  }
+            { "title": "Number of likes", "slug": "likes_total", "type": "like", "tooltip": "Do you like the building?"  }
         ]
     }
 ]
