Show UPRNs in building view
- add /building/id/uprns.json endpoint
- hide children behind details

[Closes #83]

--- a/app/src/frontend/fields-config.json
+++ b/app/src/frontend/fields-config.json
@@ -20,7 +20,7 @@
                 "disabled": true
             },
             {
-                "title": "UPRNs", "slug": "ref_uprn", "type": "list",
+                "title": "UPRNs", "slug": "uprns", "type": "list",
                 "tooltip": "Unique Property Reference Numbers (to be filled automatically)",
                 "disabled": true
             },
