--- a/app/src/frontend/fields-config.json
+++ b/app/src/frontend/fields-config.json
@@ -23,8 +23,7 @@
                 "disabled": true
             },
             {
-                "title": "Town", "slug": "location_town", "type": "text",
-                "disabled": true
+                "title": "Town", "slug": "location_town", "type": "text"
             },
             {
                 "title": "Postcode", "slug": "location_postcode", "type": "text",
