--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
 node_js:
   - 8
-cache:
-  directories:
-    - app/node_modules
+cache: npm
 before_script:
-  - cd $TRAVIS_BUILD_DIR/app && npm install
+  - cd $TRAVIS_BUILD_DIR/app && npm ci
 script:
   - cd $TRAVIS_BUILD_DIR/app && npm test
