--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.6",
     "leaflet": "^1.4.0",
     "mapnik": "^4.2.1",
+    "node-fs": "^0.1.7",
     "pg-promise": "^8.5.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
