--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
     "react-leaflet": "^1.0.1",
     "react-leaflet-universal": "^1.2.0",
     "react-router-dom": "^4.3.1",
-    "serialize-javascript": "^1.6.1"
+    "serialize-javascript": "^1.6.1",
+    "sharp": "^0.21.3"
   },
   "devDependencies": {
     "razzle": "^2.4.1",
