--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "react-leaflet": "^1.0.1",
     "react-leaflet-universal": "^1.2.0",
     "react-router-dom": "^4.3.1",
+    "query-string": "^6.2.0",
     "serialize-javascript": "^1.7.0",
     "sharp": "^0.21.3"
   },
