Upgrade npm packages (razzle to 3.0.0)

--- a/app/package.json
+++ b/app/package.json
@@ -11,29 +11,31 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@mapbox/sphericalmercator": "^1.1.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "connect-pg-simple": "^5.0.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "leaflet": "^1.4.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.1",
+    "leaflet": "^1.5.1",
     "mapnik": "^4.2.1",
     "node-fs": "^0.1.7",
-    "pg-promise": "^8.5.6",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "pg-promise": "^8.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-leaflet": "^1.0.1",
     "react-leaflet-universal": "^1.2.0",
     "react-router-dom": "^4.3.1",
-    "serialize-javascript": "^1.6.1",
+    "serialize-javascript": "^1.7.0",
     "sharp": "^0.21.3"
   },
   "devDependencies": {
-    "razzle": "^2.4.1",
-    "babel-eslint": "^10.0.1"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.13.0",
+    "razzle": "^3.0.0"
   }
 }
