--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -20,7 +20,8 @@
   "rules": {
     "no-console": "off",
     "strict": ["error", "global"],
-    "curly": "warn"
+    "curly": "warn",
+    "quotes": ["warn", "single"]
   },
   "plugins": [
     "react"
