Lint 4-space indent

--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -21,7 +21,8 @@
     "no-console": "off",
     "strict": ["error", "global"],
     "curly": "warn",
-    "quotes": ["warn", "single"]
+    "quotes": ["warn", "single"],
+    "indent": ["warn", 4]
   },
   "plugins": [
     "react"
