Lint prefer-const

--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -29,7 +29,8 @@
     "comma-spacing": ["warn"],
     "camelcase": ["warn", {"ignoreDestructuring": true ,"properties": "never"}],
     "eol-last": ["warn", "always"],
-    "no-multiple-empty-lines": ["warn", {"max": 1}]
+    "no-multiple-empty-lines": ["warn", {"max": 1}],
+    "prefer-const": "warn"
   },
   "plugins": [
     "jest",
