--- a/app/package.json
+++ b/app/package.json
@@ -38,7 +38,9 @@
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
+    "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
+    "@types/prop-types": "^15.7.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
