--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,7 +7,7 @@
         "lib": ["es6", "es2015", "es2017", "dom"],
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         "noImplicitAny": false
     },
     "include": [
