Fix duplicate slug

--- a/app/src/frontend/building/fields-config.json
+++ b/app/src/frontend/building/fields-config.json
@@ -248,7 +248,7 @@
             {
                 "title": "FAR ratio (percentage of plot covered by building)",
                 "disabled": true,
-                "slug": "size_plot_area_total",
+                "slug": "size_far_ratio",
                 "type": "number",
                 "step": 0.1
             },
