--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "leaflet": "^1.5.1",
     "mapnik": "^4.2.1",
     "node-fs": "^0.1.7",
+    "nodemailer": "^6.3.0",
     "pg-promise": "^8.7.5",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.2",
@@ -39,7 +40,8 @@
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
     "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.1",
+    "@types/node": "^8.10.52",
+    "@types/nodemailer": "^6.2.1",
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
