--- a/app/package.json
+++ b/app/package.json
@@ -45,6 +45,7 @@
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
+    "@types/react-leaflet": "^2.4.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/webpack-env": "^1.14.0",
     "babel-eslint": "^10.0.2",
