--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
     "@types/jest": "^24.0.17",
+    "@types/lodash": "^4.14.149",
     "@types/mapbox__sphericalmercator": "^1.1.3",
     "@types/node": "^8.10.52",
     "@types/nodemailer": "^6.2.1",
