--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "leaflet": "^1.6.0",
+    "lodash.isequal": "^4.5.0",
     "mapnik": "^4.2.1",
     "node-fs": "^0.1.7",
     "nodemailer": "^6.3.0",
@@ -43,6 +44,7 @@
     "@types/express-session": "^1.15.16",
     "@types/jest": "^24.0.23",
     "@types/lodash": "^4.14.149",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/mapbox__sphericalmercator": "^1.1.3",
     "@types/node": "^8.10.59",
     "@types/nodemailer": "^6.2.2",
