--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,7 +10,8 @@
         "esModuleInterop": true,
         "noImplicitAny": false
     },
-    "include": [
-        "./src/**/*"
+    "files": [
+        "./src/index.ts",
+        "./src/client.tsx"
     ]
 }
