--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -13,5 +13,9 @@
     "files": [
         "./src/index.ts",
         "./src/client.tsx"
+    ],
+    "include": [
+        "./src/**/*.test.*",
+        "./src/**/*.spec.*"
     ]
 }
