--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -1,5 +1,15 @@
 {
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint",
+    "jest",
+    "react"
+  ],
   "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "eslint:recommended",
     "plugin:jest/recommended",
     "plugin:react/recommended"
@@ -11,7 +21,6 @@
     "es6": true,
     "jest": true
   },
-  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
@@ -32,10 +41,6 @@
     "no-multiple-empty-lines": ["warn", {"max": 1}],
     "prefer-const": "warn"
   },
-  "plugins": [
-    "jest",
-    "react"
-  ],
   "settings": {
     "react": {
       "version": "detect"
