--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "lint": "eslint .",
+    "lint": "eslint --ext .tsx --ext .ts .",
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
@@ -53,6 +53,8 @@
     "@types/react-router-dom": "^4.3.5",
     "@types/sharp": "^0.22.3",
     "@types/webpack-env": "^1.15.1",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.21.0",
@@ -60,8 +62,6 @@
     "razzle": "^3.0.0",
     "razzle-plugin-typescript": "^3.0.0",
     "ts-jest": "^24.3.0",
-    "tslint": "^5.20.1",
-    "tslint-react": "^4.2.0",
     "typescript": "^3.8.3"
   },
   "jest": {
