Add babel-runtime explicitly to deps
Was failing to build with:

Cannot find module 'babel-runtime/helpers/extends'
Require stack:
- /app/node_modules/react-leaflet-universal/dist/decorator.js
- /app/node_modules/react-leaflet-universal/dist/index.js
- /app/build/server.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:966:15)
    at Function.Module._load (internal/modules/cjs/loader.js:842:27)
    at Module.require (internal/modules/cjs/loader.js:1026:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (/home/tom/projects/colouring-london/colouring-london/app/node_modules/react-leaflet-universal/dist/decorator.js:7:17)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Module.require (internal/modules/cjs/loader.js:1026:19)

--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@mapbox/sphericalmercator": "^1.1.0",
+    "babel-runtime": "^6.26.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "connect-pg-simple": "^6.1.0",
