--- a/app/package.json
+++ b/app/package.json
@@ -13,57 +13,58 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@mapbox/sphericalmercator": "^1.1.0",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
+    "canvas-confetti": "^1.2.0",
     "connect-pg-simple": "^6.1.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "leaflet": "^1.6.0",
     "lodash.isequal": "^4.5.0",
     "mapnik": "^4.4.0",
     "node-fs": "^0.1.7",
-    "nodemailer": "^6.4.6",
+    "nodemailer": "^6.4.11",
     "pg-promise": "^8.7.5",
-    "query-string": "^6.12.0",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^1.0.1",
-    "react-leaflet-universal": "^1.2.0",
-    "react-router-dom": "^5.0.1",
+    "react-leaflet-universal": "^2.2.1",
+    "react-router-dom": "^5.2.0",
     "serialize-javascript": "^2.1.1",
     "sharp": "^0.22.1",
     "use-throttle": "0.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.5",
+    "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
     "@types/jest": "^24.9.1",
-    "@types/lodash": "^4.14.149",
+    "@types/lodash": "^4.14.158",
     "@types/lodash.isequal": "^4.5.5",
     "@types/mapbox__sphericalmercator": "^1.1.3",
-    "@types/node": "^12.12.35",
+    "@types/node": "^12.12.53",
     "@types/nodemailer": "^6.4.0",
-    "@types/react": "^16.9.33",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-leaflet": "^2.5.1",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-leaflet": "^2.5.2",
     "@types/react-router-dom": "^4.3.5",
     "@types/sharp": "^0.22.3",
-    "@types/webpack-env": "^1.15.1",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@types/webpack-env": "^1.15.2",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.21.0",
-    "eslint-plugin-react": "^7.19.0",
-    "razzle": "^3.1.3",
-    "razzle-plugin-typescript": "^3.0.0",
+    "eslint-plugin-react": "^7.20.5",
+    "razzle": "^3.1.6",
+    "razzle-plugin-typescript": "^3.1.6",
     "ts-jest": "^24.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   },
   "jest": {
     "transform": {
