Add JSON Schema data field validation in API

--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@mapbox/sphericalmercator": "^1.1.0",
+    "ajv": "^7.1.1",
+    "ajv-formats": "^1.5.1",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
@@ -24,6 +26,7 @@
     "connect-pg-simple": "^6.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "json-diff": "^0.5.4",
     "leaflet": "^1.6.0",
     "lodash.isequal": "^4.5.0",
     "mapnik": "^4.4.0",
@@ -44,6 +47,7 @@
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
     "@types/jest": "^24.9.1",
+    "@types/json-diff": "^0.5.1",
     "@types/lodash": "^4.14.158",
     "@types/lodash.isequal": "^4.5.5",
     "@types/mapbox__sphericalmercator": "^1.1.3",
