--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,6 @@
     "@mapbox/sphericalmercator": "^1.1.0",
     "ajv": "^7.1.1",
     "ajv-formats": "^1.5.1",
-    "babel-runtime": "^6.26.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "canvas-confetti": "^1.2.0",
@@ -56,18 +55,22 @@
     "@types/react-leaflet": "^2.5.2",
     "@types/react-router-dom": "^4.3.5",
     "@types/sharp": "^0.22.3",
-    "@types/webpack-env": "^1.15.2",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "babel-eslint": "^10.1.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-jest": "^22.21.0",
-    "eslint-plugin-react": "^7.20.5",
-    "razzle": "^3.1.6",
-    "razzle-plugin-typescript": "^3.1.6",
-    "ts-jest": "^24.3.0",
-    "typescript": "^3.9.7"
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "copy-webpack-plugin": "^8.1.1",
+    "eslint": "^7.24.0",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-react": "^7.23.2",
+    "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss": "^8.2.4",
+    "razzle": "^4.0.4",
+    "razzle-dev-utils": "^4.0.4",
+    "razzle-plugin-typescript": "^4.0.4",
+    "ts-jest": "^26.5.5",
+    "typescript": "^3.9.7",
+    "webpack": "^5.24.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "jest": {
     "transform": {
