--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@loadable/component": "^5.14.1",
     "@mapbox/sphericalmercator": "^1.1.0",
     "ajv": "^7.1.1",
     "ajv-formats": "^1.5.1",
@@ -25,36 +26,39 @@
     "connect-pg-simple": "^6.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "leaflet": "^1.6.0",
+    "geojson": "^0.5.0",
+    "leaflet": "^1.7.1",
     "lodash.isequal": "^4.5.0",
     "mapnik": "^4.4.0",
     "node-fs": "^0.1.7",
     "nodemailer": "^6.4.11",
     "pg-promise": "^8.7.5",
     "query-string": "^6.13.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-leaflet": "^1.0.1",
-    "react-leaflet-universal": "^2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "serialize-javascript": "^5.0.1",
-    "sharp": "^0.22.1",
+    "sharp": "^0.28.1",
     "use-throttle": "0.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
-    "@types/jest": "^24.9.1",
+    "@types/geojson": "^7946.0.7",
+    "@types/jest": "^26.0.22",
+    "@types/leaflet": "^1.7.0",
+    "@types/loadable__component": "^5.13.3",
     "@types/lodash": "^4.14.158",
     "@types/lodash.isequal": "^4.5.5",
     "@types/mapbox__sphericalmercator": "^1.1.3",
     "@types/node": "^12.12.53",
     "@types/nodemailer": "^6.4.0",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-leaflet": "^2.5.2",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^4.3.5",
-    "@types/sharp": "^0.22.3",
+    "@types/sharp": "^0.28.0",
+    "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "copy-webpack-plugin": "^8.1.1",
@@ -68,7 +72,7 @@
     "razzle-dev-utils": "^4.0.4",
     "razzle-plugin-typescript": "^4.0.4",
     "ts-jest": "^26.5.5",
-    "typescript": "^3.9.7",
+    "typescript": "^4.2.4",
     "webpack": "^5.24.0",
     "webpack-dev-server": "^3.11.0"
   },
