Update/install explicitly lodash

--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,7 @@
     "express-session": "^1.17.1",
     "geojson": "^0.5.0",
     "leaflet": "^1.7.1",
-    "lodash.isequal": "^4.5.0",
+    "lodash": "^4.17.21",
     "mapnik": "^4.5.8",
     "node-fs": "^0.1.7",
     "nodemailer": "^6.4.11",
@@ -49,8 +49,7 @@
     "@types/jest": "^26.0.22",
     "@types/leaflet": "^1.7.0",
     "@types/loadable__component": "^5.13.3",
-    "@types/lodash": "^4.14.158",
-    "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash": "^4.14.168",
     "@types/mapbox__sphericalmercator": "^1.1.3",
     "@types/node": "^12.12.53",
     "@types/nodemailer": "^6.4.0",
