--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "mapnik": "^4.5.8",
+    "markdown-to-jsx": "^7.1.3",
     "node-fs": "^0.1.7",
     "nodemailer": "^6.4.11",
     "pg-format": "^1.0.4",
