Add Melda, Tarn, Louis to .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -32,6 +32,16 @@
         "code",
         "doc"
       ]
+    },    
+    {
+      "login": "mz8i",
+      "name": "mz8i",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/36160844?v=4",
+      "profile": "https://github.com/mz8i",
+      "contributions": [
+        "code",
+        "ideas"
+      ]
     },
     {
       "login": "dominijk",
@@ -71,13 +81,30 @@
       ]
     },
     {
-      "login": "mz8i",
-      "name": "mz8i",
-      "avatar_url": "https://avatars2.githubusercontent.com/u/36160844?v=4",
-      "profile": "https://github.com/mz8i",
+      "login": "MeldaS",
+      "name": "MeldaS",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/33935846?v=4",
+      "profile": "https://github.com/MeldaS",
       "contributions": [
-        "code",
-        "ideas"
+        "code"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Tarn Hamilton",
+      "avatar_url": "docs/images/green.png",
+      "profile": "#",
+      "contributions": [
+        "design"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Louis Jobst",
+      "avatar_url": "docs/images/yellow.png",
+      "profile": "http://www.louisjobst.com/index.php/about/",
+      "contributions": [
+        "design"
       ]
     },
     {
