--- a/etl/requirements.txt
+++ b/etl/requirements.txt
@@ -1,7 +1,7 @@
 # Python packages for etl
 fiona==1.7.13
 osmnx==0.8.1
-psycopg2==2.7.5
+psycopg2==2.8.4 # test is it working, used to be 2.7.5 (no obviously borken things)
 shapely==1.6.4
 retrying==1.3.3
 requests==2.23.0
