--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: postgres://postgres:newPassword@postgres:8080/colouring-london-db
+      DATABASE_URL: postgres://postgres:postgres@postgres:8080/colouring-london-db
       NODE_ENV: development
       PORT: 8080
     ports:
@@ -23,23 +23,23 @@ services:
       # - ./src/migrations/dbinit.sql:/docker-entrypoint-initdb.d/dbinit.sql
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: newPassword
+      POSTGRES_USER: dockeruser
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: colouring-london-db
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4:4.18
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@linuxhint.com
-      PGADMIN_DEFAULT_PASSWORD: secret
-      PGADMIN_LISTEN_PORT: 80
-    ports:
-      - "8080:80"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-    depends_on:
-      - postgres
-volumes:
-    db-data:
-    pgadmin-data:
+#   pgadmin:
+#     container_name: pgadmin
+#     image: dpage/pgadmin4:4.18
+#     restart: always
+#     environment:
+#       PGADMIN_DEFAULT_EMAIL: admin@linuxhint.com
+#       PGADMIN_DEFAULT_PASSWORD: secret
+#       PGADMIN_LISTEN_PORT: 80
+#     ports:
+#       - "8080:80"
+#     volumes:
+#       - pgadmin-data:/var/lib/pgadmin
+#     depends_on:
+#       - postgres
+# volumes:
+#     db-data:
+#     pgadmin-data:
