--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -13,7 +13,7 @@ jobs:
         Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        python -m pip install -r etl/requirements.txt
     - name: Run Flake8
       run: |
         ls etl/*py | grep -v 'join_building_data' | xargs flake8 --exclude etl/__init__.py
