--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -13,6 +13,8 @@ jobs:
         Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install pytest
+        python -m pip install flake8
         python -m pip install -r etl/requirements.txt
     - name: Run Flake8
       run: |
