--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
       - "5432:5432"
     volumes: 
       - ./postgresdata:/var/lib/postgresql/data
-      - ./colouring-london/migrations:/colouring-london/migrations
-      - ./colouring-london/etl:/colouring-london/etl
-      - ./colouring-london/init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
+      - ./migrations:/colouring-london/migrations
+      - ./etl:/colouring-london/etl
+      - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
     restart: always
     environment:
       POSTGRES_USER: dockeruser
